# fastapi-template

./: .gitignore  .pre-commit-config.yaml  Makefile  pyproject.toml
app/: config.py  main.py
app-docker/: Dockerfile  docker-compose.yaml  docker-entrypoint.sh
app/api/: __init__.py  example.py
app/core/: constants.py  dependencies.py  filters.py  logging.py  models.py  repositories.py  services.py  types.py
app/core/enums/: __init__.py  db.py  environment.py  tags.py
app/core/exceptions/: __init__.py  base_exception.py  error_handlers.py
app/core/helpers/: __init__.py
app/core/middlewares/: __init__.py  error_middleware.py
app/core/schemas/: base.py
app/db/: __init__.py  engine.py  migration_helpers.py
app/db/migrations/: alembic.ini  env.py
app/domain/example/: models.py  repositories.py  schemas.py  services.py
